--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,9 @@
-<h1>Welcome to KizunaLingua</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<style>
+body {
+    background-image: url('<%= image_url "kizuna lingua wip.png" %>');
+    background-size: 500px 500px;
+    background-position: center center;
+    background-repeat: no-repeat;
+    min-height: 80vh;
+    }
+</style>
