--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,12 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Zen+Old+Mincho&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Alan+Sans:wght@300..900&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+JP&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Story+Script&display=swap');
+    </style>
   </head>
 
   <body><%= render "shared/navbar" %>
