added cards styling to topic show page

--- a/app/assets/stylesheets/components/_body_color.scss
+++ b/app/assets/stylesheets/components/_body_color.scss
@@ -1,9 +1,8 @@
 body {
-  // background-color: #271e35;
   background: linear-gradient(120deg, #1a1423, #271e35);
   color: white;
 }
 
 // body {
-//   background-color:#EEE2DF ;
+//   background-color:#eed7c5 ;
 // }
