--- a/app/assets/stylesheets/components/_journal_list.scss
+++ b/app/assets/stylesheets/components/_journal_list.scss
@@ -25,7 +25,8 @@
 }
 
 .journal-list .list-group-item:hover {
-  transform: scale(1.05)
+  transform: scale(1.05);
+  z-index: 10;
 }
 
 /* Ensure the last item doesn't have extra margin at the bottom of the container */
