--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,3 +1,4 @@
+<div class ="card-container">
 <div class="container mt-4 d-flex justify-content-between align-items-center">
   <h1>Topic List</h1>
   <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newTopicModal">
@@ -6,7 +7,7 @@
 </div>
 
 <div class="container mt-4">
-  <ul class="list-group" id="itemList">
+  <ul class="journal-list" id="itemList">
     <% @topics.each do |topic| %>
       <li class="list-group-item list-item"
           data-bs-toggle="modal"
@@ -18,7 +19,7 @@
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="itemModalLabel-<%= topic.id %>"><%= topic.name %></h5>
+              <h3 class="modal-title" id="itemModalLabel-<%= topic.id %>"><%= topic.name %></h3>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -30,15 +31,16 @@
             </div>
             <div class="modal-footer">
               <%= simple_form_for ([topic, @partnership_topic]) do |f| %>
-                <%= f.submit %>
+                <%= f.submit :submit, class: "btn btn-primary" %>
               <% end %>
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Close</button>
             </div>
           </div>
         </div>
       </div>
     <% end %>
   </ul>
+</div>
 </div>
 
   <%# New Topic Modal %>
