--- a/app/assets/stylesheets/components/_new_topic.scss
+++ b/app/assets/stylesheets/components/_new_topic.scss
@@ -8,6 +8,7 @@
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     background: linear-gradient(120deg,#553745,#774C60);
     margin-top: 16px;
+    margin-bottom: 16px;
 }
 
 .new-topic-card-image {
