--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -219,5 +219,17 @@
         <div class="new-topic-card-text">Change Topic</div>
       </div>
     <% end %>
+  <% else %>
+    <div class="logo-background-box mb-3">
+      <div class="logo-card">
+      </div>
+    </div>
+    <h2>Welcome to KizunaLingua</h2>
+    <p>Choose a topic to start learning!</p>
+    <%= link_to topics_path, class: "status-card-container-link" do %>
+      <div class="new-topic-card"><img class="new-topic-card-image" src="https://images.unsplash.com/vector-1745246426047-d2ee51f1ba9b?q=80&w=2360&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Card Image">
+        <div class="new-topic-card-text">Choose a Topic</div>
+      </div>
+    <% end %>
   <% end %>
 </div>
