--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -279,7 +279,7 @@
           <h2 class="accordion-header" id="headingYourProgress"><button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseYourProgress" aria-expanded="true" aria-controls="collapseYourProgress">Your Progress</button></h2>
           <div id="collapseYourProgress" class="accordion-collapse collapse show" aria-labelledby="headingYourProgress" data-bs-parent="#progressAccordion">
             <div class="accordion-body">
-              <%= link_to topics_path(@most_recent_topic), class: "status-card-container-link" do  %>
+              <%= link_to topic_path(@most_recent_topic), class: "status-card-container-link" do  %>
                 <%= render "journal_incomplete" %>
               <% end %>
               <%= render "conversation_locked" %>
