--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -1,5 +1,5 @@
-<h1>Challenge Show page</h1>
-<%= @challenge.conversation["en"] %>
-<%= @challenge.journal.conversation_status %>
-<%= button_to 'Conversation Completed', complete_conversation_journal_path(@journal), method: :patch, class: 'btn btn-success' %>
-<%= @challenge.topic.partnership_topics.find_by(partnership: @partnership).status %>
+<div class="container">
+  <h2 class="mt-3">Conversation Challenge</h2>
+  <p class="mt-3"><%= @challenge.conversation["en"] %></p>
+  <%= button_to 'Conversation Completed', complete_conversation_journal_path(@journal), method: :patch, class: 'mt-3 btn btn-success' %>
+</div>
