--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -1,5 +1,36 @@
-<div class="container">
-  <h2 class="mt-3">Conversation Challenge</h2>
-  <p class="mt-3"><%= @challenge.conversation["en"] %></p>
-  <%= button_to 'Conversation Completed', complete_conversation_journal_path(@journal), method: :patch, class: 'mt-3 btn btn-success' %>
+<div class="container" data-controller="timer">
+  <h2 class="mt-3"><%= @topic.name %></h2>
+  <p class="mt-3">
+    <%= @challenge.conversation["en"] %>
+  </p>
+
+  ---
+
+  <div class="card text-center mb-4">
+    <div class="card-header">
+      <h4 data-timer-target="turnIndicator" class="mb-0 text-primary">
+        Press Start to Begin
+      </h4>
+    </div>
+    <div class="card-body">
+      <h1 class="display-1 fw-bold" data-timer-target="display">
+        00:30
+      </h1>
+
+      <button data-timer-target="startButton" data-action="click->timer#startTimer" class="btn btn-primary btn-lg mt-3">
+        Start Conversation Timer
+      </button>
+    </div>
+  </div>
+
+  ---
+
+  <%= button_to 'Conversation Completed',
+                complete_conversation_journal_path(@journal),
+                method: :patch,
+                id: 'completion-form-button',
+                class: 'mt-3 btn btn-success',
+                # You might want to disable this button until the timer sequence is complete
+                disabled: false
+  %>
 </div>
