--- a/app/assets/stylesheets/components/_timer.scss
+++ b/app/assets/stylesheets/components/_timer.scss
@@ -78,3 +78,25 @@
     background: linear-gradient(120deg, darken(#3D88BA, 5%), darken(#5AA0CC, 5%));
   }
 }
+
+.hint-accordion-container {
+  display: flex;
+  justify-content: center;
+  margin: 20px;
+
+  .accordion {
+    width: 100%;
+    max-width: 500px;
+  }
+
+  .accordion-button {
+    justify-content: center;
+    font-size: 1.25rem;
+    font-weight: 500;
+
+    &::after {
+      position: absolute;
+      right: 1rem;
+    }
+  }
+}
