--- a/app/views/shared/_flashes.html.erb
+++ b/app/views/shared/_flashes.html.erb
@@ -1,14 +1,7 @@
-<% if notice %>
-  <div class="alert alert-info alert-dismissible fade show m-1" role="alert">
-    <%= notice %>
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
-    </button>
-  </div>
+<% if flash[:notice] %>
+  <div data-controller="flash" data-flash-type-value="notice" data-flash-message-value="<%= flash[:notice] %>" style="display: none;"></div>
 <% end %>
-<% if alert %>
-  <div class="alert alert-warning alert-dismissible fade show m-1" role="alert">
-    <%= alert %>
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
-    </button>
-  </div>
+
+<% if flash[:alert] %>
+  <div data-controller="flash" data-flash-type-value="alert" data-flash-message-value="<%= flash[:alert] %>" style="display: none;"></div>
 <% end %>
